fix: richtext text align

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,10 @@
     @apply text-base sm:text-xl
   }
 
+  .prose .text-left {
+    text-align: left;
+  }
+
   .prose .text-right {
     text-align: right;
   }
